# kopete_globalhotkeysearchbox

./: CMakeLists.txt  README  globalsearchhotkeyplugin.cpp  globalsearchhotkeyplugin.h  kopete_globalsearchhotkey.desktop  selectnthcontactaction.cpp  selectnthcontactaction.h
